Fixing issue where shift-tab doesn't work for tbl components

--- a/AzureFunctions.AngularClient/src/sass/base/_base.scss
+++ b/AzureFunctions.AngularClient/src/sass/base/_base.scss
@@ -38,10 +38,6 @@ pre {
     color: $primary-color;
 }
 
-.hover-underline:hover{
-    text-decoration: underline;
-}
-
 :focus{
     outline: $border-focus;
 }
